--- a/registerform.ui
+++ b/registerform.ui
@@ -16,60 +16,83 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>110</y>
-     <width>72</width>
-     <height>15</height>
+     <x>90</x>
+     <y>90</y>
+     <width>81</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>昵称</string>
    </property>
   </widget>
   <widget class="QPushButton" name="confirmPushButton">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>290</y>
+     <x>400</x>
+     <y>330</y>
      <width>121</width>
      <height>51</height>
     </rect>
    </property>
    <property name="text">
-    <string>PushButton</string>
+    <string>确认</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>200</y>
+     <x>90</x>
+     <y>170</y>
      <width>72</width>
      <height>15</height>
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>密码</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit">
+  <widget class="QLineEdit" name="nickNameTextEdit">
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>90</y>
+     <y>70</y>
      <width>311</width>
      <height>51</height>
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_2">
+  <widget class="QLineEdit" name="passwordSetter">
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>180</y>
+     <y>150</y>
      <width>311</width>
      <height>51</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="passwordConfirm">
+   <property name="geometry">
+    <rect>
+     <x>200</x>
+     <y>230</y>
+     <width>311</width>
+     <height>51</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>250</y>
+     <width>72</width>
+     <height>15</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>确认密码</string>
    </property>
   </widget>
  </widget>
