--- a/friendlistform.ui
+++ b/friendlistform.ui
@@ -13,33 +13,33 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="qtIdLabel">
    <property name="geometry">
     <rect>
      <x>170</x>
-     <y>40</y>
-     <width>72</width>
-     <height>15</height>
+     <y>30</y>
+     <width>91</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>qtid</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLabel" name="MyNicknameLabel">
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>40</y>
-     <width>72</width>
-     <height>15</height>
+     <y>30</y>
+     <width>81</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>TextLabel</string>
+    <string>Faller</string>
    </property>
   </widget>
-  <widget class="QListWidget" name="listWidget">
+  <widget class="QListWidget" name="friendsPool">
    <property name="geometry">
     <rect>
      <x>30</x>
@@ -59,7 +59,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>PushButton</string>
+    <string>？</string>
    </property>
   </widget>
  </widget>
