fix local-storage 添加相对路径

--- a/images.qrc
+++ b/images.qrc
@@ -1,15 +1,14 @@
 <RCC>
     <qresource prefix="/Icons">
-        <file>C:/Users/Faller/Desktop/icon/img1.jpg</file>
-        <file>C:/Users/Faller/Desktop/icon/img2.jpg</file>
-        <file>C:/Users/Faller/Desktop/icon/img3.jpg</file>
-        <file>C:/Users/Faller/Desktop/icon/img4.jpg</file>
-        <file>C:/Users/Faller/Desktop/icon/img5.jpg</file>
-        <file>C:/Users/Faller/Desktop/icon/img6.jpg</file>
-        <file>C:/Users/Faller/Desktop/icon/img7.jpg</file>
-        <file>C:/Users/Faller/Desktop/icon/img8.jpg</file>
-        <file>C:/Users/Faller/Desktop/icon/img9.jpg</file>
-        <file>C:/Users/Faller/Desktop/icon/img10.jpg</file>
+        <file>icon/img2.jpg</file>
+        <file>icon/img3.jpg</file>
+        <file>icon/img4.jpg</file>
+        <file>icon/img5.jpg</file>
+        <file>icon/img6.jpg</file>
+        <file>icon/img7.jpg</file>
+        <file>icon/img8.jpg</file>
+        <file>icon/img9.jpg</file>
+        <file>icon/img10.jpg</file>
     </qresource>
     <qresource prefix="/images">
         <file>images/avatar.png</file>
