--- a/registerform.ui
+++ b/registerform.ui
@@ -13,11 +13,30 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QPushButton {
+	border-radius: 4px;
+    border: 1px solid gray;
+    background-color: white;
+}
+
+QPushButton:hover {
+    background-color: rgb(236, 245, 255);
+    border: 1px solid rgb(64, 158, 255);
+    color: rgb(64, 158, 255);
+}
+
+QPushButton:pressed {
+    background-color: rgb(236, 245, 255);
+    border: 1px solid rgb(64, 100, 255);
+    color: rgb(64, 100, 255);
+}</string>
+  </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>80</y>
+     <x>70</x>
+     <y>130</y>
      <width>81</width>
      <height>31</height>
     </rect>
@@ -37,11 +56,16 @@
   <widget class="QPushButton" name="confirmPushButton">
    <property name="geometry">
     <rect>
-     <x>400</x>
+     <x>100</x>
      <y>330</y>
      <width>121</width>
      <height>51</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>15</pointsize>
+    </font>
    </property>
    <property name="text">
     <string>确认</string>
@@ -50,8 +74,8 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>160</y>
+     <x>80</x>
+     <y>200</y>
      <width>72</width>
      <height>31</height>
     </rect>
@@ -71,8 +95,8 @@
   <widget class="QLineEdit" name="nickNameTextEdit">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>70</y>
+     <x>170</x>
+     <y>120</y>
      <width>311</width>
      <height>51</height>
     </rect>
@@ -81,8 +105,8 @@
   <widget class="QLineEdit" name="passwordSetter">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>150</y>
+     <x>170</x>
+     <y>190</y>
      <width>311</width>
      <height>51</height>
     </rect>
@@ -91,8 +115,8 @@
   <widget class="QLineEdit" name="passwordConfirm">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>230</y>
+     <x>170</x>
+     <y>260</y>
      <width>311</width>
      <height>51</height>
     </rect>
@@ -101,8 +125,8 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>240</y>
+     <x>50</x>
+     <y>270</y>
      <width>101</width>
      <height>31</height>
     </rect>
@@ -117,6 +141,61 @@
    </property>
    <property name="alignment">
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>290</x>
+     <y>10</y>
+     <width>251</width>
+     <height>101</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border-image: url(:/images/images/qt.png);</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>20</y>
+     <width>181</width>
+     <height>91</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>黑体</family>
+     <pointsize>20</pointsize>
+     <italic>false</italic>
+    </font>
+   </property>
+   <property name="text">
+    <string>网络无限
+开拓不懈</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="cancelPushButton">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>330</y>
+     <width>121</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>15</pointsize>
+    </font>
+   </property>
+   <property name="text">
+    <string>取消</string>
    </property>
   </widget>
  </widget>
