--- a/images.qrc
+++ b/images.qrc
@@ -9,6 +9,8 @@
         <file>icon/img8.jpg</file>
         <file>icon/img9.jpg</file>
         <file>icon/img10.jpg</file>
+        <file>C:/Users/Faller/Desktop/icon/img1.jpg</file>
+        <file>icon/img1.jpg</file>
     </qresource>
     <qresource prefix="/images">
         <file>images/avatar.png</file>
