--- a/chatform.ui
+++ b/chatform.ui
@@ -17,18 +17,18 @@
    <property name="geometry">
     <rect>
      <x>25</x>
-     <y>11</y>
+     <y>40</y>
      <width>700</width>
-     <height>500</height>
+     <height>471</height>
     </rect>
    </property>
   </widget>
   <widget class="QTextEdit" name="typeBoard">
    <property name="geometry">
     <rect>
-     <x>33</x>
-     <y>506</y>
-     <width>661</width>
+     <x>25</x>
+     <y>530</y>
+     <width>700</width>
      <height>121</height>
     </rect>
    </property>
@@ -36,14 +36,27 @@
   <widget class="QPushButton" name="sendMessageButton">
    <property name="geometry">
     <rect>
-     <x>750</x>
-     <y>530</y>
-     <width>151</width>
-     <height>51</height>
+     <x>590</x>
+     <y>610</y>
+     <width>121</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
     <string>发送</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="sendFileBtn">
+   <property name="geometry">
+    <rect>
+     <x>790</x>
+     <y>560</y>
+     <width>121</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>传文件</string>
    </property>
   </widget>
  </widget>
