--- a/friendlistform.ui
+++ b/friendlistform.ui
@@ -13,24 +13,11 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QLabel" name="qtIdLabel">
-   <property name="geometry">
-    <rect>
-     <x>170</x>
-     <y>30</y>
-     <width>91</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>qtid</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="MyNicknameLabel">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>30</y>
+     <x>140</x>
+     <y>0</y>
      <width>81</width>
      <height>31</height>
     </rect>
@@ -53,7 +40,7 @@
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>607</y>
+     <y>600</y>
      <width>93</width>
      <height>41</height>
     </rect>
@@ -70,6 +57,32 @@
      <width>201</width>
      <height>31</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="iconLabel">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>10</y>
+     <width>65</width>
+     <height>65</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="qtIdLabel">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>50</y>
+     <width>72</width>
+     <height>15</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
    </property>
   </widget>
  </widget>
