--- a/mymsgitem.ui
+++ b/mymsgitem.ui
@@ -79,6 +79,19 @@ margin-bottom: 5px;
     <string>TextLabel</string>
    </property>
   </widget>
+  <widget class="QLabel" name="msgIcon">
+   <property name="geometry">
+    <rect>
+     <x>100</x>
+     <y>60</y>
+     <width>50</width>
+     <height>50</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
