fix UI: chatform和friendList界面更新
1. chatform的界面remake
2. friendList的界面完善

--- a/images.qrc
+++ b/images.qrc
@@ -17,6 +17,7 @@
         <file>images/close.png</file>
         <file>images/minimize.png</file>
         <file>images/file.png</file>
+        <file>images/file_press.png</file>
     </qresource>
     <qresource prefix="/Config">
         <file>config.xml</file>
