--- a/chatform.ui
+++ b/chatform.ui
@@ -26,7 +26,8 @@
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: white;</string>
+    <string notr="true">background-color: white;
+border-radius: 12px;</string>
    </property>
    <property name="frameShape">
     <enum>QFrame::StyledPanel</enum>
@@ -43,25 +44,67 @@
       <height>431</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">border: 3px solid rgb(0, 85, 255);
+border-left: 0px;
+border-top: 0px;
+border-bottom-left-radius: 0;
+border-bottom-right-radius: 0;
+border-top-right-radius: 0;</string>
+    </property>
    </widget>
    <widget class="QTextEdit" name="typeBoard">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>430</y>
-      <width>701</width>
+      <width>700</width>
       <height>131</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border: 3px solid rgb(0, 85, 255);
+border-top: 1.5px;
+border-bottom: 0px;
+border-bottom-left-radius: 0;
+border-bottom-right-radius: 0;
+border-top-right-radius: 0;
+border-top-left-radius: 0;</string>
     </property>
    </widget>
    <widget class="QPushButton" name="sendMessageButton">
     <property name="geometry">
      <rect>
-      <x>600</x>
-      <y>580</y>
-      <width>91</width>
-      <height>31</height>
+      <x>570</x>
+      <y>510</y>
+      <width>121</width>
+      <height>41</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>15</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+    margin: 2px;
+	border-radius: 4px;
+    border: 1px solid gray;
+    background-color: white;
+}
+
+QPushButton:hover {
+    background-color: rgb(236, 245, 255);
+    border: 1px solid rgb(64, 158, 255);
+    color: rgb(64, 158, 255);
+}
+
+QPushButton:pressed {
+    background-color: rgb(236, 245, 255);
+    border: 1px solid rgb(64, 100, 255);
+    color: rgb(64, 100, 255);
+}</string>
     </property>
     <property name="text">
      <string>发送</string>
@@ -70,19 +113,111 @@
    <widget class="QPushButton" name="sendFileBtn">
     <property name="geometry">
      <rect>
-      <x>780</x>
-      <y>460</y>
-      <width>81</width>
-      <height>81</height>
+      <x>730</x>
+      <y>450</y>
+      <width>100</width>
+      <height>100</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">border-image: url(:/images/images/file.png);</string>
+     <string notr="true">QPushButton{
+    margin-bottom: -14px;
+    border-image: url(:/images/images/file.png);
+}
+
+QPushButton:hover {
+     
+	border-image: url(:/images/images/file_press.png);
+}</string>
     </property>
     <property name="text">
-     <string>传文件</string>
+     <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="IconLabel">
+    <property name="geometry">
+     <rect>
+      <x>720</x>
+      <y>30</y>
+      <width>181</width>
+      <height>101</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/images/images/qt.png);
+margin-left: -40px;
+margin-right: -20px;
+margin-top: -8px;
+margin-bottom: -6px;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QLabel" name="TencentName">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>10</y>
+     <width>191</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: white;
+background-color: rgba(0,0,0,0);
+font-size:40px;</string>
+   </property>
+   <property name="text">
+    <string>QTencent</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="CloseButton">
+   <property name="geometry">
+    <rect>
+     <x>889</x>
+     <y>10</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {
+	border-image: url(:/images/images/close.png);
+	background-color: rgba(0,0,0,0);
+}
+
+QPushButton:hover {
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 rgba(255, 0, 0, 255), stop:1 rgba(255, 106, 0, 255));
+}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="SmallButton">
+   <property name="geometry">
+    <rect>
+     <x>820</x>
+     <y>10</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton {
+	border-image: url(:/images/images/minimize.png);
+background-color: rgba(0,0,0,0);
+}
+
+QPushButton:hover {
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 rgba(200, 200, 200, 150), stop:1 rgba(220, 220, 220, 150));
+}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
   </widget>
  </widget>
  <resources/>
