--- a/chatform.ui
+++ b/chatform.ui
@@ -6,28 +6,30 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>965</width>
-    <height>668</height>
+    <width>1000</width>
+    <height>800</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:0, y2:0, stop:0 rgba(64, 80, 255, 255), stop:1 rgba(64, 160, 255, 255));</string>
+   <string notr="true"/>
   </property>
-  <widget class="QFrame" name="frame">
+  <widget class="QFrame" name="BackgroundFrame">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>90</y>
-     <width>931</width>
-     <height>561</height>
+     <x>15</x>
+     <y>15</y>
+     <width>970</width>
+     <height>770</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: white;
-border-radius: 12px;</string>
+    <string notr="true">#BackgroundFrame{
+border-radius: 8px;
+background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:0, y2:0, stop:0 rgba(64, 80, 255, 255), stop:1 rgba(64, 160, 255, 255));
+}</string>
    </property>
    <property name="frameShape">
     <enum>QFrame::StyledPanel</enum>
@@ -35,59 +37,83 @@ border-radius: 12px;</string>
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
-   <widget class="QListWidget" name="MsgBoard">
+   <widget class="QFrame" name="MainFrame">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>700</width>
-      <height>431</height>
+      <x>20</x>
+      <y>140</y>
+      <width>921</width>
+      <height>601</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">border: 3px solid rgb(0, 85, 255);
-border-left: 0px;
+     <string notr="true">#MainFrame{
+background-color: white;
+border-radius: 12px;
+}</string>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="QListWidget" name="MsgBoard">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>711</width>
+       <height>431</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">#MsgBoard{
+border: 3px solid rgb(0, 85, 255);
 border-top: 0px;
 border-bottom-left-radius: 0;
 border-bottom-right-radius: 0;
-border-top-right-radius: 0;</string>
-    </property>
-   </widget>
-   <widget class="QTextEdit" name="typeBoard">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>430</y>
-      <width>700</width>
-      <height>131</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">border: 3px solid rgb(0, 85, 255);
+border-top-right-radius: 0;
+}</string>
+     </property>
+    </widget>
+    <widget class="QTextEdit" name="typeBoard">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>430</y>
+       <width>711</width>
+       <height>171</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">#typeBoard{
+border: 3px solid rgb(0, 85, 255);
 border-top: 1.5px;
 border-bottom: 0px;
 border-bottom-left-radius: 0;
 border-bottom-right-radius: 0;
 border-top-right-radius: 0;
-border-top-left-radius: 0;</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="sendMessageButton">
-    <property name="geometry">
-     <rect>
-      <x>570</x>
-      <y>510</y>
-      <width>121</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>15</pointsize>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
+border-top-left-radius: 0;
+}</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="sendMessageButton">
+     <property name="geometry">
+      <rect>
+       <x>540</x>
+       <y>540</y>
+       <width>121</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton {
     margin: 2px;
 	border-radius: 4px;
     border: 1px solid gray;
@@ -105,22 +131,22 @@ QPushButton:pressed {
     border: 1px solid rgb(64, 100, 255);
     color: rgb(64, 100, 255);
 }</string>
-    </property>
-    <property name="text">
-     <string>发送</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="sendFileBtn">
-    <property name="geometry">
-     <rect>
-      <x>730</x>
-      <y>450</y>
-      <width>100</width>
-      <height>100</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
+     </property>
+     <property name="text">
+      <string>发送</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="sendFileBtn">
+     <property name="geometry">
+      <rect>
+       <x>770</x>
+       <y>410</y>
+       <width>100</width>
+       <height>100</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton{
     margin-bottom: -14px;
     border-image: url(:/images/images/file.png);
 }
@@ -129,61 +155,43 @@ QPushButton:hover {
      
 	border-image: url(:/images/images/file_press.png);
 }</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QLabel" name="IconLabel">
-    <property name="geometry">
-     <rect>
-      <x>720</x>
-      <y>30</y>
-      <width>181</width>
-      <height>101</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">border-image: url(:/images/images/qt.png);
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="IconLabel">
+     <property name="geometry">
+      <rect>
+       <x>730</x>
+       <y>20</y>
+       <width>181</width>
+       <height>101</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-image: url(:/images/images/qt.png);
 margin-left: -40px;
 margin-right: -20px;
 margin-top: -8px;
 margin-bottom: -6px;</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
    </widget>
-  </widget>
-  <widget class="QLabel" name="TencentName">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>10</y>
-     <width>191</width>
-     <height>71</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: white;
-background-color: rgba(0,0,0,0);
-font-size:40px;</string>
-   </property>
-   <property name="text">
-    <string>QTencent</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="CloseButton">
-   <property name="geometry">
-    <rect>
-     <x>889</x>
-     <y>10</y>
-     <width>61</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton {
+   <widget class="QPushButton" name="CloseButton">
+    <property name="geometry">
+     <rect>
+      <x>880</x>
+      <y>10</y>
+      <width>61</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
 	border-image: url(:/images/images/close.png);
 	background-color: rgba(0,0,0,0);
 }
@@ -191,22 +199,22 @@ font-size:40px;</string>
 QPushButton:hover {
     background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 rgba(255, 0, 0, 255), stop:1 rgba(255, 106, 0, 255));
 }</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="SmallButton">
-   <property name="geometry">
-    <rect>
-     <x>820</x>
-     <y>10</y>
-     <width>61</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton {
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="SmallButton">
+    <property name="geometry">
+     <rect>
+      <x>820</x>
+      <y>10</y>
+      <width>61</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
 	border-image: url(:/images/images/minimize.png);
 background-color: rgba(0,0,0,0);
 }
@@ -214,10 +222,29 @@ background-color: rgba(0,0,0,0);
 QPushButton:hover {
     background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 rgba(200, 200, 200, 150), stop:1 rgba(220, 220, 220, 150));
 }</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="TencentName">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>20</y>
+      <width>261</width>
+      <height>101</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: white;
+background-color: rgba(0,0,0,0);
+font-size:40px;</string>
+    </property>
+    <property name="text">
+     <string>QTencent</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
