--- a/signinform.ui
+++ b/signinform.ui
@@ -137,6 +137,9 @@ background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:0, y2:0, stop:0 rgb
        <height>51</height>
       </rect>
      </property>
+     <property name="echoMode">
+      <enum>QLineEdit::Password</enum>
+     </property>
     </widget>
     <widget class="QPushButton" name="signInPushButton">
      <property name="geometry">
